test/should-fail/vsgc614.f3
/* 
 * Regression test: VSGC-614: Incorrect error position
 *
 * @test/compile-error
 */

import java.lang.*;
var i = 0;
i = bar();

function bar():Void {
}
